--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^8.0.0",
+    "vue-disqus": "^3.0.5",
     "vue-fuse": "^2.1.0",
+    "vue-typed-js": "^0.1.2",
     "yaml-front-matter": "^4.0.0"
   },
   "devDependencies": {
