--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,11 @@
   "background_color": "#ffffff",
   "icons": [
     {
+      "src": "assets/static/blog-hexo.36a08ae.7330f5cc4de2c4a81aa1ac0beeb67d2a.webp",
+      "sizes": "640x280",
+      "type": "image/webp"
+    },
+    {
       "src": "assets/static/danvega-avatar.1b1e47a.faaaa00645b2a3c9c199f40fd55348bf.png",
       "sizes": "80x113",
       "type": "image/png"
